# django-telegram-bot-template

./: .gitignore  Makefile  env_vars  pyproject.toml  req.txt  requirements.txt  setup.cfg
bot_init/: admin.py  apps.py  markup.py  models.py  schemas.py  service.py  tests.py  urls.py  utils.py  views.py
bot_init/management/commands/: start.py  update_webhook.py
bot_init/migrations/: 0001_initial.py
bot_init/services/: answer.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/splitted_settings/: boilerplate.py  bot.py  db.py  environ.py  installed_apps.py  logging.py
